# 25-LDTH-PyBulletLanding

./: .gitignore  .pre-commit-config.yaml  README.md  bulk_run.sh  pyproject.toml  run_simulation.py
arondite/assets/: landingpad.dae  landingpad.mtl  plat_test.py  platform.urdf
drones/: main.py
drones/control/: BaseControl.py
drones/envs/: BaseAviary.py  CtrlAviary.py  __init__.py
drones/utils/: enums.py
sim/assets/: platform2.urdf  platform3.urdf
sim/control/: BaseControl.py  DSLPIDControl.py
sim/envs/: BaseAviary.py  CtrlAviary.py
sim/utils/: enums.py
solution/: compute_target_position.py
