[project]
name = "gym-pybullet-drones"
version = "2.0.0"
description = "Arondite PyBullet USV drone environment for reinforcement learning"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "transforms3d>=0.4.1",
  "matplotlib>=3.7",
  "pytest>=7.3,<9.0",
  "pybullet>=3.2.5",
  "gymnasium~=0.28",
  "stable-baselines3>=2.0.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv]  # Optional section for uv-specific settings
# Add custom settings here if needed